            - Needs the new Permission 'playtimerewards.cmd.playtimetop'

    - Config Values:
        - Value "AllowAutoUpdate" (boolean) allows to Automatically download the newest Plugin Version and install at the next server restart
            -> Made it hidden. Users who explicitly want to use it, may still enable it.

    - PlaceholderAPI Support:
        - Added the following Placeholders:
            - %ptr_playtime% -> Returns the Playtime for the Player, the message format is defined as 'EXT_PAPI_TIME_FORMAT'
            - %ptr_sessiontime% -> Returns the Sessiontime for the Player, the message format is defined as 'EXT_PAPI_TIME_FORMAT'
        - All custom Lang Messages can now use PlaceholderAPI's Placeholders.



Changelog Version 0.1.2:
    - Added a Config.yml
        - Value "EnableUpdateCheck" (boolean) controls whether the Plugin Notifies the Admins about a new Plugin Version
        - Value "DataSaveInterval" (timeString) controls the Automatic Save Interval (-1 Disables the Autosave)
        - Hidden Value "debug_allowDebugTools" (boolean) allows the access to the DebugTools
        - Hidden Value "ColorCode" (char) sets the color code for the whole Plugin

    - Added a bunch of new Permissions:
        - Changed the Permission "timerewards.cmd.playtime.own" to "playtimerewards.cmd.playtime.own"
        - Added the following Permissions:
            - playtimerewards.*
            - playtimerewards.notifyOnUpdate
            - playtimerewards.cmd.playtime.other

    - Changes to Messages:
        - New Messages:
            - NOTIF_UPDATE_AVAILABLE -> Notifies Users with "playtimerewards.notifyOnUpdate"-Permission about a new Update
            - CMD_SUC_PT_OTHER -> The Message Players receive when looking at other Players Playtime
            - CMD_ERR_PLAYER_NOT_FOUND -> The Error that gets shown when the specified Player is not found
        - Changed Messages:
            - Renamed PTR_SUC_PLAYTIMECOMMAND to CMD_SUC_PT_OWN